Fixed collection text overflow.

--- a/steam/mt-steam-tweaks.css
+++ b/steam/mt-steam-tweaks.css
@@ -60,6 +60,9 @@
 [class*='appportrait_LibraryItemBox'] {
   border-width: 0 !important;
 }
+[class*='allcollections_Collection_'] [class*='allcollections_CollectionLabel_'] {
+  width: calc(100% - 20px);
+}
 /* */
 
 /* hide game card badges until hovered */
